# foundational-agentic-architecture

./: .env.example  .gitignore  LICENSE  README.md  action.py  agent6.py  artifacts.py  decision.py  mcp_server.py  memory.py  perception.py  pyproject.toml  schemas.py  session_6_learnings.md
