[project]
name = "foundational-agentic-architecture"
version = "0.1.0"
description = "EAG V3 — Session 6 Agentic Architecture assignment"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "mcp>=0.9",
    "ddgs>=9.14.4",
    "crawl4ai>=0.8.9",
    "tavily-python>=0.7.25",
    "tzdata>=2024.1",  # Windows ships no IANA tz database; get_time needs this
]
